inicio do desenvolvimento

--- a/Index.html
+++ b/Index.html
@@ -6,9 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina Teste</title>
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="styleteste.css">
+    <link rel="stylesheet" href="/css/index.css">
 </head>
 </head>
 
@@ -21,18 +20,15 @@
                 <h2>RESÍDUOS EM ADUBO ORGÂNICO</h2>
             </div>
             <button class="botao">
-    <a href="#">Saiba Mais</a>
-</button>
-        </section>
-        <section class="insumos">
-            <img src="https://i2.wp.com/files.agro20.com.br/uploads/2020/10/Insumos-agricolas-1.jpg?resize=1024%2C659&ssl=1" alt="insumos">
-
+              <a href="#">Saiba Mais</a>
+            </button>
+            <img src="/Imagens/compostagem1.jpg" alt="">
         </section>
 
         <section>
             <div class="cards">
                 <img id="foto1" src="./Imagens/insumos3.jpg" alt="">
-                <img id="foto2" src="./Imagens/insumos.png" alt="">
+                <img id="foto2" src="./Imagens/insumos600x400.png" alt="">
                 <img id="foto3 " src="./Imagens/insumo1.png " alt=" ">
             </div>
 
