--- a/Index.html
+++ b/Index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina Teste</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="css/header.css">
+    <script src="./JS/header.js" defer></script>
+    <script src="./JS/cards.js" defer></script>
+    <script src="main.js" defer></script>
+    <script src="./JS/ButtonTop.js" defer></script>
+
+    <title>Resíduo Sustentável</title>
 </head>
 
 
@@ -15,22 +21,21 @@
     <main>
         <section class="container">
             <div>
-                <h1>TRANSFORME SEU AGRONEGÓCIO</h1>
-                <h2>PROFISSIONAIS TRANSFORMANDO SEU</h2>
-                <h2>RESÍDUOS EM ADUBO ORGÂNICO</h2>
+                <h1>TRANSFORME SEU AGRONEGÓCIO PROFISSIONAIS TRANSFORMANDO SEU RESÍDUOS EM ADUBO ORGÂNICO</h1>
             </div>
             <button class="botao">
               <a href="#">Saiba Mais</a>
             </button>
-            <img src="/Imagens/compostagem1.jpg" alt="">
         </section>
 
         <section>
-            <div class="cards">
-                <img id="foto1" src="./Imagens/insumos3.jpg" alt="">
-                <img id="foto2" src="./Imagens/insumos600x400.png" alt="">
-                <img id="foto3 " src="./Imagens/insumo1.png " alt=" ">
-            </div>
+            <nav id="folhetos">
+                <figure class="image">
+                    <a href="#"><img src="./Imagens/img tratadas/Cards/insumo1.png" class="img1" alt="" /> </a>
+                    <a href="#"><img src="./Imagens/img tratadas/Cards/insumos3.jpg" class="img2" alt="" /> </a>
+                    <a href="#"><img src="./Imagens/img tratadas/Cards/insumos600x400.png" class="img3" alt="" /> </a>
+                </figure>
+            </nav>
 
         </section>
         <section class="texto-final">
@@ -43,7 +48,7 @@
         </section>
 
     </main>
-
+    <script src="./JS/carousel.js"></script>
 </body>
 
 </html>
