criando menu mobile

--- a/header.html
+++ b/header.html
@@ -14,12 +14,20 @@
     <nav class="menu">
         <a class="logo" href="">Logo</a>
 
+        <div class="mobile-menu">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+
+        </div>
+
         <ul class="nav-list">
             <li><a href="#">Início</a></li>
             <li><a href="#">Parceiros</a></li>            
             <li><a href="#">Login</a></li>            
             <li><a href="#">Contato</a></li>
         </ul>
+
     </nav>
 
     
