--- a/Index.html
+++ b/Index.html
@@ -29,7 +29,7 @@
         
                     <div class="card-container">
                         <figure class="image">
-                            <a href="#"><img src="Imagens/img tratadas/Cards/insumos3.jpg" alt="Campos do Jordão - SP" />
+                            <a href="#"><img src="Imagens/img tratadas/Cards/insumos3.jpg" alt="" />
                             </a>
                         </figure>
                         <div class="content">
