--- a/header.html
+++ b/header.html
@@ -12,7 +12,7 @@
 
 <body>
     <nav class="menu">
-        <a class="logo" href="">Logo</a>
+        <a class="logo" href="/">Logo</a>
 
         <div class="mobile-menu">
             <div class="line1"></div>
@@ -22,10 +22,10 @@
         </div>
 
         <ul class="nav-list">
-            <li><a href="#">Início</a></li>
-            <li><a href="#">Parceiros</a></li>            
-            <li><a href="#">Login</a></li>            
-            <li><a href="#">Contato</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/">Parceiros</a></li>            
+            <li><a href="/">Login</a></li>            
+            <li><a href="/">Contato</a></li>
         </ul>
 
     </nav>
