Alterações no corpo do index

--- a/Index.html
+++ b/Index.html
@@ -5,13 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/index.css">
-    <link rel="stylesheet" href="css/header.css">
-    <script src="./JS/header.js" defer></script>
-    <script src="./JS/cards.js" defer></script>
-    <script src="main.js" defer></script>
-    <script src="./JS/ButtonTop.js" defer></script>
+
 
     <title>Resíduo Sustentável</title>
 </head>
@@ -47,39 +42,53 @@
 
 
 
-
     </main>
+    <div class="texto-inicial">
+        <h1>PROFISSIONAIS TRANSFORMANDO SEU RESÍDUO EM ADUBO ORGÂNICO</h1>
+        <h2>TRANSORME SEU AGRONEGÓCIO</h2>
+    </div>
 
-    <section class="container">
-        <div>
-            <h1>TRANSFORME SEU AGRONEGÓCIO PROFISSIONAIS TRANSFORMANDO SEU RESÍDUOS EM ADUBO ORGÂNICO</h1>
+    <section class="cadastro">
+        <div class="cadastro1">
+            <h1>Fornecedores de Insumos: Cadastre-se Aqui!</h1>
         </div>
-        <button class="botao">
-              <a href="#">Saiba Mais</a>
-            </button>
-    </section>
 
-    <section>
-        <nav id="folhetos">
-            <figure class="image">
-                <a href="#"><img src="./Imagens/img tratadas/Cards/insumo1.png" class="img1" alt="" /> </a>
-                <a href="#"><img src="./Imagens/img tratadas/Cards/insumos3.jpg" class="img2" alt="" /> </a>
-                <a href="#"><img src="./Imagens/img tratadas/Cards/insumos600x400.png" class="img3" alt="" /> </a>
-            </figure>
-        </nav>
-
-    </section>
-    <section class="texto-final">
-        <div>
-            <h1>Pelo meio ambiente,</h1>
-            <h1>para conservação</h1>
-            <h1>do nosso PLANETA.</h1>
-
+        <div class="cadastro2">
+            <h1>Interessados: Cadastre-se Aqui!</h1>
         </div>
+
     </section>
+
+    <div>
+
+        <a class="cards1" href="#" target="_blank">
+            <img src="./Imagens/compostagem1.jpg" alt="" srcset=""></a>
+
+        <a class="cards1" href="#" target="_blank">
+            <img src="./Imagens/insumos.png" alt="" srcset=""></a>
+
+        <a class="cards1" href="#" target="_blank">
+            <img src="./Imagens/Compostagem3.jpg" alt="" srcset=""></a>
+
+    </div>
+
+
+    <div class="texto-impacto">
+        <h1>O futuro depende de nós!</h1>
+    </div>
+
+
+
+
 
 
     <script src="./JS/carrousel.js"></script>
 </body>
+
+<footer>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It
+        has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+
+</footer>
 
 </html>
