--- a/header.html
+++ b/header.html
@@ -1,34 +1,35 @@
 <!DOCTYPE html>
 <html lang="Pt-Br">
-<head>
-    
+
+<head>    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste Menu</title>
+    <title>menu teste</title>
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/header.css">
-
 </head>
-
 <body>
-    <nav class="menu">
-        <a class="logo" href="/">Logo</a>
+    <header>
+        <nav class="menu">
+            <a class="logo" href="/">Logo</a>
 
-        <div class="mobile-menu">
-            <div class="line1"></div>
-            <div class="line2"></div>
-            <div class="line3"></div>
+            <div class="mobile-menu">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
 
-        </div>
+            </div>
 
-        <ul class="nav-list">
-            <li><a href="/">Home</a></li>
-            <li><a href="/">Parceiros</a></li>            
-            <li><a href="/">Login</a></li>            
-            <li><a href="/">Contato</a></li>
-        </ul>
+            <ul class="nav-list">
+                <li><a href="/">Home</a></li>
+                <li><a href="/">Parceiros</a></li>            
+                <li><a href="/">Login</a></li>            
+                <li><a href="/">Contato</a></li>
+            </ul>
 
-    </nav>
+        </nav>
+    </header>
 
     <script src="./js/header.js"></script>    
 </body>
