--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
                 </a>
               </figure>
               <div class="content">
-                <p class="title text--medium">###</p>
+                <p class="title text--medium">
+                  Veja como usar seu adubo orgânico
+                </p>
               </div>
             </div>
 
@@ -53,7 +55,7 @@
                 </a>
               </figure>
               <div class="content">
-                <p class="title text--medium">###</p>
+                <p class="title text--medium">Veja benefícios</p>
               </div>
             </div>
 
@@ -67,7 +69,9 @@
                 </a>
               </figure>
               <div class="content">
-                <p class="title text--medium">##</p>
+                <p class="title text--medium">
+                  Zero desperdício, 100% de retorno
+                </p>
               </div>
             </div>
           </div>
