--- a/index.html
+++ b/index.html
@@ -101,16 +101,19 @@
       </section>
 
       <div>
-        <a class="cards1" href="#" target="_blank">
-          <img src="./Imagens/compostagem1.jpg" alt="" srcset=""
+        <a href="#" target="_blank">
+          <img src="./Imagens/img tratadas/Cards/insumo1.png" alt="" srcset=""
         /></a>
 
         <a class="cards1" href="#" target="_blank">
-          <img src="./Imagens/insumos.png" alt="" srcset=""
+          <img src="./Imagens/img tratadas/Cards/insumos3.jpg" alt="" srcset=""
         /></a>
 
         <a class="cards1" href="#" target="_blank">
-          <img src="./Imagens/Compostagem3.jpg" alt="" srcset=""
+          <img
+            src="./Imagens/img tratadas/Cards/insumos600x400.png"
+            alt=""
+            srcset=""
         /></a>
       </div>
 
