adicionando script header

--- a/Index.html
+++ b/Index.html
@@ -159,6 +159,7 @@
       </p>
     </footer>
     
+    <script src="./js/header.js"></script>        
     <script src="./JS/carousel.js"></script>
 
   </body>
