--- a/index.html
+++ b/index.html
@@ -1,147 +1,136 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/index.css" />    
+    <link rel="stylesheet" href="/css/index.css" />
     <link rel="stylesheet" href="/css/header.css" />
 
 
     <title>Resíduo Sustentável</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <main>
 
-        
-    <header>
-        <nav class="menu">
-            <a class="logo" href="/">Logo</a>
 
-            <div class="mobile-menu">
-                <div class="line1"></div>
-                <div class="line2"></div>
-                <div class="line3"></div>
+        <header>
+            <nav class="menu">
+                <a class="logo" href="/">Logo</a>
 
-            </div>
+                <div class="mobile-menu">
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                    <div class="line3"></div>
 
-            <ul class="nav-list">
-                <li><a href="/">Home</a></li>
-                <li><a href="/">Parceiros</a></li>            
-                <li><a href="/">Login</a></li>            
-                <li><a href="/">Contato</a></li>
-            </ul>
-
-        </nav>
-    </header>
-
-        <section id="carousel">
-            <div class="carousel-images">
-            <img src="./Imagens/Carrousel/img1.jpeg" alt="" class="active" />
-            <img src="./Imagens/Carrousel/img2.jpeg" alt="" />
-            <img src="./Imagens/Carrousel/img3.jpeg" alt="" />
-            <img src="./Imagens/Carrousel/img4.jpeg" alt="" />
-
-            <div>
-                <a onclick="trocaImg(-1)" id="left-button">❮</a>
-            </div>
-
-            <div>
-                <a onclick="trocaImg(1)" id="rigth-button">❯</a>
-            </div>
-
-            <div class="text-informs">
-                <p class="informs">Resíduos que se transformam em VIDA!</p>
-            </div>
-            </div>
-        </section>
-
-        <section class="container">
-            <nav>
-            <div class="animation-cards">
-                <div class="card-container">
-                <figure class="image">
-                    <a href="#"
-                    ><img src="Imagens/img tratadas/Cards/insumo1.png" alt="" />
-                    </a>
-                </figure>
-                <div class="content">
-                    <p class="title text--medium">
-                    Veja como usar seu adubo orgânico
-                    </p>
-                </div>
                 </div>
 
-                <div class="card-container">
-                <figure class="image">
-                    <a href="#"
-                    ><img src="Imagens/img tratadas/Cards/insumos3.jpg" alt="" />
-                    </a>
-                </figure>
-                <div class="content">
-                    <p class="title text--medium">Veja benefícios</p>
-                </div>
-                </div>
+                <ul class="nav-list">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/">Parceiros</a></li>
+                    <li><a href="/">Login</a></li>
+                    <li><a href="/">Contato</a></li>
+                </ul>
 
-                <div class="card-container">
-                <figure class="image">
-                    <a href="#"
-                    ><img
-                        src="Imagens/img tratadas/Cards/insumos600x400.png"
-                        alt="Holambra - SP"
-                    />
-                    </a>
-                </figure>
-                <div class="content">
-                    <p class="title text--medium">
-                    Zero desperdício, 100% de retorno
-                    </p>
-                </div>
-                </div>
-            </div>
             </nav>
-        </section>
-        <section class="texto-final">
-            <div>
-            <h1>Pelo meio ambiente,</h1>
-            <h1>para conservação</h1>
-            <h1>do nosso PLANETA.</h1>
-            </div>
-        </section>
-
-        <div class="texto-inicial">
-            <h1>PROFISSIONAIS TRANSFORMANDO SEU RESÍDUO EM ADUBO ORGÂNICO</h1>
-            <h2>TRANSORME SEU AGRONEGÓCIO</h2>
-        </div>
+        </header>
 
         <section class="cadastro">
             <div class="cadastro1">
-            <h1>Fornecedores de Insumos: Cadastre-se Aqui!</h1>
+                <h1>Fornecedores de Insumos</h1>
+                <button class="btn btn-success">Cadastre-se Aqui!</button>
             </div>
 
-            <div class="cadastro2">
-            <h1>Interessados: Cadastre-se Aqui!</h1>
+            <div class="cadastro1">
+                <h1>Interessados: </h1>
+                <button class="btn btn-success">Cadastre-se Aqui!</button>
             </div>
         </section>
 
-        <div>
-            <a href="#" target="_blank">
-            <img src="./Imagens/img tratadas/Cards/insumo1.png" alt="" srcset=""
-            /></a>
 
-            <a class="cards1" href="#" target="_blank">
-            <img src="./Imagens/img tratadas/Cards/insumos3.jpg" alt="" srcset=""
-            /></a>
 
-            <a class="cards1" href="#" target="_blank">
-            <img
-                src="./Imagens/img tratadas/Cards/insumos600x400.png"
-                alt=""
-                srcset=""
-            /></a>
+        <section class="container">
+            <nav>
+                <div class="animation-cards">
+                    <div class="card-container">
+                        <figure class="image">
+                            <a href="https://blog.belagro.com.br/adubo-organico/#:~:text=Os%20cuidados%20na%20utiliza%C3%A7%C3%A3o%20do%20adubo%20org%C3%A2nico&text=O%20adubo%20org%C3%A2nico%20feito%20com,aten%C3%A7%C3%A3o%20di%C3%A1ria%2C%20mesmo%20que%20pequena." target="_blank"><img src="Imagens/img tratadas/Cards/insumo1.png" alt="" />
+                            </a>
+                        </figure>
+                        <div class="content">
+                            <p class="title text--medium">
+                                Veja como usar seu adubo orgânico
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="card-container">
+                        <figure class="image">
+                            <a href="https://www.embrapa.br/busca-de-solucoes-tecnologicas/-/produto-servico/7239/composto-organico-100-vegetal#:~:text=N%C3%A3o%20h%C3%A1%20necessidade%20de%20adi%C3%A7%C3%A3o,ser%20certificado%20como%20produto%20org%C3%A2nico." target="_blank"><img src="Imagens/img tratadas/Cards/insumos3.jpg" alt="" />
+                            </a>
+                        </figure>
+                        <div class="content">
+                            <p class="title text--medium">Veja benefícios</p>
+                        </div>
+                    </div>
+
+                    <div class="card-container">
+                        <figure class="image">
+                            <a href="https://alimentacaoemfoco.org.br/adubo-sustentavel-diminui-desperdicio/" target="_blank"><img src="Imagens/img tratadas/Cards/insumos600x400.png" alt="Holambra - SP" />
+                            </a>
+                        </figure>
+                        <div class="content">
+                            <p class="title text--medium">
+                                Zero desperdício, 100% de retorno
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </section>
+
+
+        <div class="texto-inicial">
+            <h1>PROFISSIONAIS TRANSFORMANDO SEU RESÍDUO EM ADUBO ORGÂNICO.</h1>
+            <h1>TRANSORME SEU AGRONEGÓCIO</h1>
+            <h2> Técnicas de Compostagem</h2>
+
         </div>
+
+        <div class="gallery-container">
+            <a href="#" class="gallery-items">
+                <img src="./Imagens/Compostagem tipos/1.jpg" alt="compostagem">
+            </a>
+            <a href="#" class="gallery-items">
+                <img src="./Imagens/Compostagem tipos/2.jpg" alt="compostagem">
+            </a>
+            </a>
+            <a href="#" class="gallery-items">
+                <img src="./Imagens/Compostagem tipos/3.jpeg" alt="compostagem">
+            </a>
+            </a>
+            <a href="#" class="gallery-items">
+                <img src="./Imagens/Compostagem tipos/4.jfif" alt="compostagem">
+            </a>
+            </a>
+            <a href="#" class="gallery-items">
+                <img src="./Imagens/Compostagem tipos/5.png" alt="compostagem">
+            </a>
+            </a>
+            <a href="#" class="gallery-items">
+                <img src="./Imagens/Compostagem tipos/6.jpg" alt="compostagem">
+            </a>
+            </a>
+            <a href="#" class="gallery-items">
+                <img src="./Imagens/Compostagem tipos/7.webp" alt="compostagem">
+            </a>
+
+        </div>
+
+
 
         <div class="texto-impacto">
             <h1>O futuro depende de nós!</h1>
@@ -149,18 +138,12 @@
     </main>
 
     <footer>
-      <p>
-        Lorem Ipsum is simply dummy text of the printing and typesetting
-        industry. Lorem Ipsum has been the industry's standard dummy text ever
-        since the 1500s, when an unknown printer took a galley of type and
-        scrambled it to make a type specimen book. It has survived not only five
-        centuries, but also the leap into electronic typesetting, remaining
-        essentially unchanged.
-      </p>
+
     </footer>
-    
-    <script src="./js/header.js"></script>        
+
+    <script src="./js/header.js"></script>
     <script src="./JS/carousel.js"></script>
 
-  </body>
+</body>
+
 </html>
