--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/index.css" />
-    <link rel="stylesheet" href="/css/header.css" />
+    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/index.css" />
+    <link rel="stylesheet" href="/header.css" />
 
 
     <title>Resíduo Sustentável</title>
@@ -40,12 +40,9 @@
 
         <section class="cadastro">
             <div class="cadastro1">
-                <h1>Fornecedores de Insumos</h1>
+                <h1 class="user">Fornecedores de Insumos</h1>
                 <button class="btn btn-success">Cadastre-se Aqui!</button>
-            </div>
-
-            <div class="cadastro1">
-                <h1>Interessados: </h1>
+                <h1 class="user">Interessados: </h1>
                 <button class="btn btn-success">Cadastre-se Aqui!</button>
             </div>
         </section>
