ajustes links CSS e header

--- a/index.html
+++ b/index.html
@@ -1,42 +1,45 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style.css" >
-    <link rel="stylesheet" href="/index.css" >
-    <link rel="stylesheet" href="/header.css" >
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./header.css">
 
+    
+    <title>Resíduos Orgânicos</title>
 
-    <title>Resíduo Sustentável</title>
 </head>
 
+
 <body>
+    
+    <header>
+        <nav class="menu">
+            <a class="logo" href="/">Logo</a>
+
+            <div class="mobile-menu">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+
+            </div>
+
+            <ul class="nav-list">
+                <li><a href="/">Home</a></li>
+                <li><a href="/">Parceiros</a></li>
+                <li><a href="/">Login</a></li>
+                <li><a href="/">Contato</a></li>
+            </ul>
+
+        </nav>
+    </header>
+
     <main>
 
 
-        <header>
-            <nav class="menu">
-                <a class="logo" href="/">Logo</a>
-
-                <div class="mobile-menu">
-                    <div class="line1"></div>
-                    <div class="line2"></div>
-                    <div class="line3"></div>
-
-                </div>
-
-                <ul class="nav-list">
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/">Parceiros</a></li>
-                    <li><a href="/">Login</a></li>
-                    <li><a href="/">Contato</a></li>
-                </ul>
-
-            </nav>
-        </header>
 
         <section class="cadastro">
             <div class="cadastro1">
