--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/index.css">
 
 
+
     <title>Resíduos Orgânicos</title>
 
 </head>
@@ -91,13 +92,9 @@
         <div class="texto-impacto">
             <h1>O futuro depende de nós!</h1>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Adipiscing elit ut aliquam purus sit. Mattis molestie a iaculis at erat
-                pellentesque. Est velit egestas dui id ornare arcu odio ut sem. Tempor nec feugiat nisl pretium fusce id
-                velit ut. Sapien eget mi proin sed libero enim sed faucibus. Neque vitae tempus quam pellentesque nec
-                nam aliquam sem. Lobortis elementum nibh tellus molestie nunc non blandit massa enim. Massa ultricies mi
-                quis hendrerit dolor magna eget est lorem. Enim lobortis scelerisque fermentum dui faucibus in ornare.
-                Et tortor consequat id porta nibh.
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Adipiscing elit ut aliquam purus sit. Mattis molestie a iaculis at erat pellentesque. Est velit egestas dui id ornare
+                arcu odio ut sem. Tempor nec feugiat nisl pretium fusce id velit ut. Sapien eget mi proin sed libero enim sed faucibus. Neque vitae tempus quam pellentesque nec nam aliquam sem. Lobortis elementum nibh tellus molestie nunc non blandit
+                massa enim. Massa ultricies mi quis hendrerit dolor magna eget est lorem. Enim lobortis scelerisque fermentum dui faucibus in ornare. Et tortor consequat id porta nibh.
 
         </div>
 
@@ -107,8 +104,7 @@
                 <div class="animation-cards">
                     <div class="card-container">
                         <figure class="image">
-                            <a href="https://blog.belagro.com.br/adubo-organico/#:~:text=Os%20cuidados%20na%20utiliza%C3%A7%C3%A3o%20do%20adubo%20org%C3%A2nico&text=O%20adubo%20org%C3%A2nico%20feito%20com,aten%C3%A7%C3%A3o%20di%C3%A1ria%2C%20mesmo%20que%20pequena."
-                                target="_blank"><img src="Imagens/img tratadas/Cards/insumo1.png" alt="" />
+                            <a href="https://blog.belagro.com.br/adubo-organico/#:~:text=Os%20cuidados%20na%20utiliza%C3%A7%C3%A3o%20do%20adubo%20org%C3%A2nico&text=O%20adubo%20org%C3%A2nico%20feito%20com,aten%C3%A7%C3%A3o%20di%C3%A1ria%2C%20mesmo%20que%20pequena." target="_blank"><img src="Imagens/img tratadas/Cards/insumo1.png" alt="" />
                             </a>
                         </figure>
                         <div class="content">
@@ -120,8 +116,7 @@
 
                     <div class="card-container">
                         <figure class="image">
-                            <a href="https://www.embrapa.br/busca-de-solucoes-tecnologicas/-/produto-servico/7239/composto-organico-100-vegetal#:~:text=N%C3%A3o%20h%C3%A1%20necessidade%20de%20adi%C3%A7%C3%A3o,ser%20certificado%20como%20produto%20org%C3%A2nico."
-                                target="_blank"><img src="Imagens/img tratadas/Cards/insumos3.jpg" alt="" />
+                            <a href="https://www.embrapa.br/busca-de-solucoes-tecnologicas/-/produto-servico/7239/composto-organico-100-vegetal#:~:text=N%C3%A3o%20h%C3%A1%20necessidade%20de%20adi%C3%A7%C3%A3o,ser%20certificado%20como%20produto%20org%C3%A2nico." target="_blank"><img src="Imagens/img tratadas/Cards/insumos3.jpg" alt="" />
                             </a>
                         </figure>
                         <div class="content">
@@ -131,9 +126,7 @@
 
                     <div class="card-container">
                         <figure class="image">
-                            <a href="https://alimentacaoemfoco.org.br/adubo-sustentavel-diminui-desperdicio/"
-                                target="_blank"><img src="Imagens/img tratadas/Cards/insumos600x400.png"
-                                    alt="Holambra - SP" />
+                            <a href="https://alimentacaoemfoco.org.br/adubo-sustentavel-diminui-desperdicio/" target="_blank"><img src="Imagens/img tratadas/Cards/insumos600x400.png" alt="Holambra - SP" />
                             </a>
                         </figure>
                         <div class="content">
@@ -150,7 +143,34 @@
     </main>
 
     <footer>
+        <div class="footer-content">
+            <h3>Obrigado pela sua visita!</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit quam quaerat dolorem, aperiam nostrum, aliquam repellendus consectetur laborum facere vel quidem eveniet. Id odit accusantium veritatis tenetur adipisci delectus laboriosam!</p>
+            <ul class="socials">
 
+                <li>
+                    <a href="#"><img src="./Imagens/img tratadas/icons/facebook.png">
+                </li>
+                <li>
+                    <a href="https://github.com/Wellpt/TechTeamProject" target="_blank"><img src="./Imagens/img tratadas/icons/git.png">
+                    </a>
+                </li>
+                <li>
+                    <a href="#"><img src="./Imagens/img tratadas/icons/instagram.webp">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://wa.me/5581988693599?text=Agradecemos+o+seu+contato!+%0d%0aEm+breve+voc%c3%aa+ser%c3%a1+atendido." target="_blank"><img src="./Imagens/img tratadas/icons/whatsapp.png"></a>
+                </li>
+                <li>
+                    <a href="#"><img src="./Imagens/img tratadas/icons/email.png"></a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="footer-bottom">
+            <p>Copyright &copy;2022 TechTeam</p>
+        </div>
     </footer>
 
     <script src="./js/header.js"></script>
