--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                 <button class="btn btn-success">Cadastre-se Aqui!</button>
             </div>
         </section>
-        <h1>Zero de Dispedício!</h1>
         <article class="art">
             <div class="art2">
+                <h1>Zero Desperdício</h1>
                 <p> De acordo com o vice-presidente de Comunicação do Conselho Científico Agro Sustentável (CCAS),
                     Coriolano Xavier, esse valor é relacionado apenas às perdas de alimentos (in natura ou processados)
                     nos supermercados. São alimentos descartados devido à aparência, danos ou validade, a maior parte
@@ -63,12 +63,15 @@
                 </p>
             </div>
             <div class="art2">
-                <p> De acordo com o vice-presidente de Comunicação do Conselho Científico Agro Sustentável (CCAS),
-                    Coriolano Xavier, esse valor é relacionado apenas às perdas de alimentos (in natura ou processados)
-                    nos supermercados. São alimentos descartados devido à aparência, danos ou validade, a maior parte
-                    entre frutas, legumes e verduras, mas também itens de padaria, confeitaria, comida pronta, carnes e
-                    peixes. “Juntos, esses alimentos representaram cerca de 20% das chamadas “perdas operacionais” dos
-                    supermercados.
+                <h1>Produtos mais Orgânicos</h1>
+                <p> Os orgânicos possuem mais nutrientes, são mais saborosos, garantem uma fonte saudável de alimento e
+                    ainda colaboram para um meio de vida mais sustentável, uma vez que os agricultores tratam o meio
+                    ambiente com o respeito necessário.“Se eu comparar a cenoura orgânica com a cenoura convencional, a
+                    primeira vai ser menor e com uma coloração mais forte. Essa coloração mais forte é o que vai
+                    defendê-lo das pragas que poderiam causar algum dano”, explica Simone Rocha, nutricionista Simone
+                    Rocha, presidente da Associação de Nutrição do Distrito Federal. “Essas substâncias bioativas estão
+                    bem mais presentes nos orgânicos. Isso resulta em mais antioxidantes para o nosso organismo, que são
+                    substâncias que melhorarão nosso sistema imunológico e prevenirão diversas doenças.”
                 </p>
             </div>
         </article>
@@ -207,8 +210,9 @@
             </div>
 
 
-            <div id="prev" onclick="prev()"> < </div>
-            <div id="next" onclick="next()"> > </div>
+            <div id="prev" onclick="prev()">
+                < </div>
+                    <div id="next" onclick="next()"> > </div>
         </section>
 
 
@@ -250,9 +254,10 @@
         </div>
 
         <article class="art">
-            <div>
+            <div class="art2">
                 <h1>O futuro depende de nós!</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
                     dolore magna aliqua. Adipiscing elit ut aliquam purus sit. Mattis molestie a iaculis at erat
                     pellentesque. Est velit egestas dui id ornare
                     arcu odio ut sem. Tempor nec feugiat nisl pretium fusce id velit ut. Sapien eget mi proin sed libero
