--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                 <input type="text" id="nome" name="nome">
 
                 <label for="cpfCnpj">CPF/CNPJ:</label>
-                <input type="text" id="cpfCnpj" name="cpfCnpj">
+                <input type="number" id="cpfCnpj" name="cpfCnpj">
 
                 <label for="login">Email Login:</label>
-                <input type="text" id="login" name="login">
+                <input type="email" id="login" name="login">
 
                 <label for="senha">Senha:</label>
                 <input type="password" id="senha" name="senha">
@@ -73,7 +73,7 @@
                 <input type="password" id="senhav" name="senha">
 
                 <label for="telefone">Telefone:</label>
-                <input type="text" id="modelo" name="telefone">
+                <input type="number" id="modelo" name="telefone">
 
                 <label for="area">Área de atuação</label>
                 <select id="area">
@@ -187,10 +187,9 @@
                 <div class="imagens">
                     <img src="./Imagens/img tratadas/Cards/producao-agricola.jpg" alt="">
                 </div>
-                <h1>Produção Sem Desperdício</h1>
                 <div class="content">
-                    <p>Zero desperdício, 100% de lucro.</p>
-                    <a href="https://croplifebrasil.org/noticias/desperdicio-de-alimentos-no-mundo-o-problema-tambem-e-nosso/#:~:text=Principais%20fontes%20de%20desperd%C3%ADcio%20e%20perdas%20de%20alimentos&text=Produ%C3%A7%C3%A3o%20agr%C3%ADcola%3A%20perdas%20devido%20a,a%20fazenda%20e%20a%20distribui%C3%A7%C3%A3o."
+                    <p>Consumo consciente! A responsabilidade é nossa!</p>
+                    <a href="https://croplifebrasil.org/noticias/desperdicio-de-alimentos-no-mundo-o-problema-tambem-e-nosso/"
                         target="_blank">Veja mais</a>
                 </div>
             </div>
@@ -199,10 +198,9 @@
                 <div class="imagens">
                     <img src="./Imagens/img tratadas/Cards/desperdicio-de-alimentos.jpg" alt="">
                 </div>
-                <h1>Produção Sem Desperdício</h1>
                 <div class="content">
-                    <p>Alternativa para te ajudar a evitar o desperdício</p>
-                    <a href="https://summitagro.estadao.com.br/saude-no-campo/acoes-para-reduzir-o-desperdicio-de-alimentos-na-agricultura/#:~:text=Armazene%20os%20produtos%20de%20forma,embalagens%20espec%C3%ADficas%20para%20essa%20finalidade." target="_blank">Veja mais</a>
+                    <p>Conheça os benefícios do adubo orgânico para a sua plantação!</p>
+                    <a href="https://ecoadubos.com.br/conheca-os-beneficios-do-adubo-organico/" target="_blank">Veja mais</a>
                 </div>
             </div>
 
