tratamento do carousel

--- a/index.html
+++ b/index.html
@@ -73,52 +73,15 @@
                 </p>
             </div>
         </article>
-
-        <form>
-            <div class="form-doador">
-                <h3>Realize seu cadastro como doador parceiro!</h3>
-
-                <label for="nome">Nome Completo:</label>
-                <input type="text" id="nome" name="nome">
-
-                <label for="cpfCnpj">CPF/CNPJ:</label>
-                <input type="number" id="cpfCnpj" name="cpfCnpj">
-
-                <label for="login">Email Login:</label>
-                <input type="email" id="login" name="login">
-
-
-
-                <label for="senha">Confirmar Senha:</label>
-                <input type="password" id="senhav" name="senha">
-
-                <label for="telefone">Telefone:</label>
-                <input type="number" id="modelo" name="telefone">
-
-                <label for="area">Área de atuação</label>
-                <select id="area">
-                    <option value="varejo" selected>Varejo</option>
-                    <option value="supermercado">Supermercado</option>
-                    <option value="hortifruti">Hortifruti</option>
-                    <option value="restaurante">Restaurante</option>
-                    <option value="produtor rural">Produtor Rural</option>
-                    <option value="cooperativa">Cooperativa</option>
-                    <option value="outros">Outros</option>
-                </select>
-
-
-
         <section class="containerproje">
             <div class="slide-container active">
                 <div class="slide">
                     <div class="contentproje">
-                        <h3>Planeta Sustentável</h3>
+                        <h3>Triste realidade ATUAL</h3>
 
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde similique ipsam quibusdam inventore earum, quo assumenda, quam molestiae laborum praesentium velit accusantium iure excepturi. Iste dolores id odit veritatis ex?</p>
-
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde similique ipsam quibusdam
-                            inventore earum, quo assumenda, quam molestiae
-                            laborum praesentium velit accusantium iure excepturi. Iste dolores id odit veritatis ex?</p>
+                        <p>Hoje o Brasil é um dos maiores produtores de alimentos do mundo, porem nossa taxa de desperdício é maior
+                          do que qualquer outra nação. De acordo com relatório da PNUMA o índice de <strong>Desperdício</strong> de alimentos 
+                          disponíveis aos consumidores está cada vez mais alto. Cerca de 17% dos alimentos foram para a lixeira.</p>
 
                         <a href="#" class="bntproj">Saiba mais</a>
                     </div>
@@ -128,15 +91,10 @@
             <div class="slide-container">
                 <div class="slide">
                     <div class="contentproje">
-                        <h3>Planeta Sustentável</h3>
+                        <h3>Descarte Correto</h3>
 
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit aliquid assumenda eaque, inventore pariatur molestias hic, aspernatur nihil ipsam eius magni incidunt? Incidunt eveniet non magnam reprehenderit beatae doloribus soluta.</p>
-
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit aliquid assumenda eaque,
-                            inventore
-                            pariatur molestias hic, aspernatur nihil ipsam eius magni incidunt? Incidunt eveniet non
-                            magnam
-                            reprehenderit beatae doloribus soluta.</p>
+                        <p>Se o descarte for <strong>Correto</strong> além de ajudar no combate a fome, será um grande avanço na <strong>Sustentabilidade</strong>
+                        do nosso sistema alimentares, redução das emissões de gases de efeito estufa e melhora a saúde de todo nosso planeta</p>
 
                         <a href="#" class="bntproj">Saiba mais</a>
                     </div>
@@ -146,17 +104,42 @@
             <div class="slide-container">
                 <div class="slide">
                     <div class="contentproje">
-                        <h3>Planeta Sustentável</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi eos, qui obcaecati nulla aliquid non iure autem, esse aliquam itaque rerum nostrum repudiandae! At eligendi quas provident omnis voluptatem. Dignissimos..</p>
-
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi eos, qui obcaecati nulla
-                            aliquid non iure autem, esse aliquam itaque rerum nostrum
-                            repudiandae! At eligendi quas provident omnis voluptatem. Dignissimos..</p>
+                        <h3>Transformação da VIDA</h3>
+                        <p>Hoje o Brasil é um dos maiores produtores de alimentos do mundo, porem nossa taxa de desperdício é maior
+                          do que qualquer outra nação. De acordo com relatório da PNUMA o índice de <strong>Desperdício</strong> de alimentos 
+                          disponíveis aos consumidores está cada vez mais alto. Cerca de 17% dos alimentos foram para a lixeira.
+                        </p>
 
                         <a href="#" class="bntproj">Saiba mais</a>
                     </div>
                 </div>
             </div>
+            <div class="slide-container">
+              <div class="slide">
+                  <div class="contentproje">
+                      <h3>Nascimento Saudável</h3>
+                      <p>Hoje o Brasil é um dos maiores produtores de alimentos do mundo, porem nossa taxa de desperdício é maior
+                        do que qualquer outra nação. De acordo com relatório da PNUMA o índice de <strong>Desperdício</strong> de alimentos 
+                        disponíveis aos consumidores está cada vez mais alto. Cerca de 17% dos alimentos foram para a lixeira.
+                      </p>
+
+                      <a href="#" class="bntproj">Saiba mais</a>
+                  </div>
+              </div>
+          </div>
+          <div class="slide-container">
+            <div class="slide">
+                <div class="contentproje">
+                    <h3>Alimento Ricos na Mesa</h3>
+                    <p>Hoje o Brasil é um dos maiores produtores de alimentos do mundo, porem nossa taxa de desperdício é maior
+                      do que qualquer outra nação. De acordo com relatório da PNUMA o índice de <strong>Desperdício</strong> de alimentos 
+                      disponíveis aos consumidores está cada vez mais alto. Cerca de 17% dos alimentos foram para a lixeira.
+                    </p>
+
+                    <a href="#" class="bntproj">Saiba mais</a>
+                </div>
+            </div>
+        </div>
 
 
             <div id="prev" onclick="prev()">
