atualização textos Carousel

--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
                 <div class="slide">
                     <div class="contentproje">
                         <h3>Transformação da VIDA</h3>
-                        <p>Hoje o Brasil é um dos maiores produtores de alimentos do mundo, porem nossa taxa de desperdício é maior
-                          do que qualquer outra nação. De acordo com relatório da PNUMA o índice de <strong>Desperdício</strong> de alimentos 
-                          disponíveis aos consumidores está cada vez mais alto. Cerca de 17% dos alimentos foram para a lixeira.
+                        <p>Após um determinado período os resíduos passam pela transformação natural em adubo orgânico rico em 
+                          nutrientes, e perfeito para ser usado nas plantações novas, substituindo assim vários produtos quimicos usados 
+                          para suprir essa ausência de nutrientes naturais. Dando inicio assim ao ciclo natural da vida.
                         </p>
 
                         <a href="#" class="bntproj">Saiba mais</a>
@@ -118,9 +118,8 @@
               <div class="slide">
                   <div class="contentproje">
                       <h3>Nascimento Saudável</h3>
-                      <p>Hoje o Brasil é um dos maiores produtores de alimentos do mundo, porem nossa taxa de desperdício é maior
-                        do que qualquer outra nação. De acordo com relatório da PNUMA o índice de <strong>Desperdício</strong> de alimentos 
-                        disponíveis aos consumidores está cada vez mais alto. Cerca de 17% dos alimentos foram para a lixeira.
+                      <p>O surgimento da nova vida é expontâneo, logo as novas plantações nascem e com todos os nutrientes para a saúde 
+                        da humanidade, totalmente orgânico, livre de quimicas que a cada dia que passa prejudicam mais as pessoas.
                       </p>
 
                       <a href="#" class="bntproj">Saiba mais</a>
@@ -131,9 +130,8 @@
             <div class="slide">
                 <div class="contentproje">
                     <h3>Alimento Ricos na Mesa</h3>
-                    <p>Hoje o Brasil é um dos maiores produtores de alimentos do mundo, porem nossa taxa de desperdício é maior
-                      do que qualquer outra nação. De acordo com relatório da PNUMA o índice de <strong>Desperdício</strong> de alimentos 
-                      disponíveis aos consumidores está cada vez mais alto. Cerca de 17% dos alimentos foram para a lixeira.
+                    <p>Levando assim mais saúde bem estar e vida longa para todos. Com produtos mais saudáveis todos os dias na mesa.
+                      Garantindo assim a <strong>Sustentabilidade, Inovação, Tecnologia e ZERO DESPERDÍCIO</strong>
                     </p>
 
                     <a href="#" class="bntproj">Saiba mais</a>
