--- a/index.html
+++ b/index.html
@@ -53,23 +53,19 @@
 
         <article class="art">
             <div class="art2">
-                <h1>Zero de desperdício</h1>
+                <h1>Sustentabilidade</h1>
                 <p>
-                    Lorem Ipsum é simplesmente um texto fictício da indústria tipográfica e de impressão. Lorem Ipsum
-                    tem sido o texto fictício padrão da indústria desde os anos 1500, quando um impressor desconhecido
-                    pegou uma cozinha de tipos e embaralhou-a para fazer um livro de espécimes de tipos. Ele sobreviveu
-                    não apenas cinco séculos, mas também o salto para a composição eletrônica, permanecendo
-                    essencialmente inalterado. Foi popularizado na década de 1960 com o lançamento de folhas Letraset
+                  A sustentabilidade no agronegócio passou a ser um dos principais pilares do segmento e, praticamente, uma moeda de troca entre produtores, indústrias do ramo. 
+                  No entanto, mesmo sendo extremamente visada, a prática ainda não está muito bem estabelecida no Brasil.
+                  Mesmo com tantos desafios, o Brasil já parece se mover e estar pronto para essa nova etapa do agronegócio: mais limpo, mais consciente, mais diverso e mais respeitoso. Com alguma organizações tentando promover essa cultura, é possível que os nossos recursos naturais não sejam mais extintos ou entrem em escassez.
                 </p>
             </div>
             <div class="art2">
-                <h1>Zero de desperdício</h1>
+                <h1>Inovação</h1>
                 <p>
-                    Lorem Ipsum é simplesmente um texto fictício da indústria tipográfica e de impressão. Lorem Ipsum
-                    tem sido o texto fictício padrão da indústria desde os anos 1500, quando um impressor desconhecido
-                    pegou uma cozinha de tipos e embaralhou-a para fazer um livro de espécimes de tipos. Ele sobreviveu
-                    não apenas cinco séculos, mas também o salto para a composição eletrônica, permanecendo
-                    essencialmente inalterado. Foi popularizado na década de 1960 com o lançamento de folhas Letraset
+                  A Organização das Nações Unidas estima que a população mundial atingirá cerca de 10 bilhões de pessoas, em 2050. Quem alimentará esse enorme contingente de humanos e que continua crescendo? Certamente será o agricultor. Mas ele precisará fazê-lo com o mínimo impacto sobre a natureza, pois a sociedade está cada vez mais crítica sobre os potenciais danos ambientais que a agricultura pode causar.
+                  Nesse momento entra a INOVAÇÃO no agronegócio, com investimento em adubos orgânicos visando sempre a forma correta de utilizar os resíduos 
+                  na produção do adubo, contribuindo assim com meio ambiente e com mínimo de desperdício!
                 </p>
             </div>
         </article>
